--- a/StartMeet/package.json
+++ b/StartMeet/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "hoek": "^5.0.3",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.26"
