Replaced password hashing package + Made a few other changes

--- a/StartMeet/src/manifest.json
+++ b/StartMeet/src/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "StartMeet",
   "name": "StartMeet",
   "display": "standalone",
-  ​​"orientation": "portrait",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "favicon.ico",
