--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   },
   "dependencies": {
     "bcrypt": "^2.0.1",
-    "bcrypt-as-promised": "^1.1.0",
-    "bcrypt-nodejs-as-promised": "^1.0.4",
+    "bcrypt-node": "^0.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "google-auth-library": "^1.5.0",
